# bloom-filter

./: .gitignore  README.md  dune-project  test.bf  words_small.txt
_build/: .db  .digest-db  log
_build/default/: META.bloom_filter  bloom_filter.dune-package  bloom_filter.install  bloom_filter.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: bloom_filter.cma  bloom_filter.cmxa  bloom_filter.cmxs
_build/default/lib/.bloom_filter.objs/byte/: bloom_filter.cmi  bloom_filter.cmo  bloom_filter.cmt
_build/default/lib/.bloom_filter.objs/native/: bloom_filter.cmx
_build/default/lib/.merlin-conf/: lib-bloom_filter
_build/default/test/: oUnit-BloomFilter Tests.cache
_build/default/test/.merlin-conf/: exe-test_bloom_filter
_build/default/test/.test_bloom_filter.eobjs/byte/: dune__exe__Test_bloom_filter.cmi  dune__exe__Test_bloom_filter.cmti
_build/default/test/.test_bloom_filter.eobjs/native/: dune__exe__Test_bloom_filter.cmx
lib/: bloom_filter.ml  dune
test/: dune  test_bloom_filter.ml
